# splat-slim

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: reproduce.md
splat-slim/: PLAN.md  README.md  pyproject.toml
splat-slim/splat-slim/: README.md  pyproject.toml
splat-slim/splat-slim/src/splat_slim/: cli.py  io.py  metrics.py
splat-slim/splat-slim/src/splat_slim/stages/: outliers.py  quantize.py  sh.py
splat-slim/splat-slim/tests/: test_smoke.py
splat-slim/src/splat_slim/: __init__.py  cli.py  io.py
splat-slim/src/splat_slim/stages/: outliers.py  quantize.py
splat-slim/tests/: test_smoke.py
src/splat_slim/stages/: __init__.py  prune.py  sh.py
