[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splat-slim"
version = "0.1.0"
description = "Lightweight, training-free post-processing to shrink 3D Gaussian Splatting models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dace" }]
keywords = ["3d-gaussian-splatting", "3dgs", "nerf", "compression", "computer-vision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.26",
    "plyfile>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
# Heavy / environment-specific deps kept optional so the CLI installs cleanly anywhere.
torch = ["torch>=2.0"]
metrics = ["pytorch-msssim>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
splat-slim = "splat_slim.cli:app"

[project.urls]
Homepage = "https://github.com/Daceyyreal/splat-slim"
Paper = "https://doi.org/PLACEHOLDER"

[tool.hatch.build.targets.wheel]
packages = ["src/splat_slim"]

[tool.ruff]
line-length = 100
target-version = "py310"
